// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align defaults to left 1`] = `
<td
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </span>
</td>
`;

exports[`align renders center when specified 1`] = `
<td
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent ouiTableCellContent--alignCenter"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </span>
</td>
`;

exports[`align renders right when specified 1`] = `
<td
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent ouiTableCellContent--alignRight"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </span>
</td>
`;

exports[`renders OuiTableHeaderCell 1`] = `
<th
  aria-label="aria-label"
  class="ouiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent testClass1 testClass2"
  >
    <span
      class="ouiTableCellContent__text"
    >
      children
    </span>
  </span>
</th>
`;

exports[`renders td when children is null/undefined 1`] = `
<td
  aria-label="aria-label"
  class="ouiTableHeaderCell testClass1 testClass2"
  data-test-subj="test subject string"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent testClass1 testClass2"
  >
    <span
      class="ouiTableCellContent__text"
    />
  </span>
</td>
`;

exports[`sorting does not render a button with readOnly 1`] = `
<th
  aria-live="polite"
  aria-sort="descending"
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
    <span
      class="ouiTableSortIcon"
      data-ouiicon-type="sortDown"
    />
  </span>
</th>
`;

exports[`sorting is rendered with isSortAscending 1`] = `
<th
  aria-live="polite"
  aria-sort="ascending"
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
    <span
      class="ouiTableSortIcon"
      data-ouiicon-type="sortUp"
    />
  </span>
</th>
`;

exports[`sorting is rendered with isSorted 1`] = `
<th
  aria-live="polite"
  aria-sort="descending"
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
    <span
      class="ouiTableSortIcon"
      data-ouiicon-type="sortDown"
    />
  </span>
</th>
`;

exports[`sorting renders a button with onSort 1`] = `
<th
  aria-live="polite"
  aria-sort="descending"
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
>
  <button
    class="ouiTableHeaderButton ouiTableHeaderButton-isSorted"
    data-test-subj="tableHeaderSortButton"
    type="button"
  >
    <span
      class="ouiTableCellContent"
    >
      <span
        class="ouiTableCellContent__text"
      >
        Test
      </span>
      <span
        class="ouiTableSortIcon"
        data-ouiicon-type="sortDown"
      />
    </span>
  </button>
</th>
`;

exports[`width and style accepts style attribute 1`] = `
<th
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:20%"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </span>
</th>
`;

exports[`width and style accepts width attribute 1`] = `
<th
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </span>
</th>
`;

exports[`width and style accepts width attribute as number 1`] = `
<th
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:100px"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </span>
</th>
`;

exports[`width and style resolves style and width attribute 1`] = `
<th
  class="ouiTableHeaderCell"
  role="columnheader"
  scope="col"
  style="width:10%"
>
  <span
    class="ouiTableCellContent"
  >
    <span
      class="ouiTableCellContent__text"
    >
      Test
    </span>
  </span>
</th>
`;
